指摘事項修正

--- a/_assets/ejs/parts/_c-request-btn.ejs
+++ b/_assets/ejs/parts/_c-request-btn.ejs
@@ -2,9 +2,9 @@
 <%- include('./_c-modal-btn',  { id_name :"",class_name:'c-request-btn js fadein scroll_up' ,btn_text:'お申込みはこちら'}) %>
 
 
-<p class="c-request-btn__annotation js fadein scroll_up">
+<!-- <p class="c-request-btn__annotation js fadein scroll_up">
   弊社担当者からご連絡させていただきます。
-</p>
+</p> -->
 
 
 
