--- a/_assets/ejs/parts/_p-merit_tab01.ejs
+++ b/_assets/ejs/parts/_p-merit_tab01.ejs
@@ -11,10 +11,11 @@
     </div>
     <div class="p-value__annotation  js fadein scroll_up">
       <p>
-        ※1 入札によって価格は変動する可能性があります。
+        ※1 入札によって価格は変動します。
       </p>
       <p>
-        ※2 本事業では基本的にFIT電気を取扱います。
+        ※2 本事業では基本的にFIT電気を取り扱います。
+
       </p>
       <p>
         ※3 RE100等の証明には再エネ指定の環境価値を示す証書を購入する必要があります。
@@ -31,7 +32,7 @@
       </p>
       <p>
         【FIT制度】：再生可能エネルギー源（太陽光、風力、水力、地熱、バイオマス）を用いて発電された電気を、国が定める価格で一定期間、電気事業者が買い取ることを義務付けるもの。<br class="u-hidden-pc">
-        （<a href="#" class="" target="_blank">経済産業省資源エネルギー庁HP</a>）
+        （<a href="https://www.enecho.meti.go.jp/" class="" target="_blank">経済産業省資源エネルギー庁HP</a>）
       </p>
       <p>
         ※本事業で流通するFIT電気は、(1)FIT電気のみ (2)再エネ指定の環境価値を示す証書等により実質的に再生可能エネルギーによる電気としての価値を有するもの、両方を購入可能です。（この電気を調達する費用の一部は、電気の利用者が広く負担する賦課金によって賄われており、CO2が排出されないことを始めとする再生可能エネルギーとしての価値を訴求するにあたっては、国の制度上、非化石証書等の環境価値を取引する証書の使用が必要とされています。FIT電気は、環境価値を示す証書を使用しない場合には、CO２排出量について火力発電等も含めた全国平均の電気のCO2排出量を持った電気として扱われます。）
