--- a/_assets/ejs/parts/_p-merit_tab02.ejs
+++ b/_assets/ejs/parts/_p-merit_tab02.ejs
@@ -3,7 +3,7 @@
   <div class="p-merit__chiyoda">
     <%# メリット %>
     <h3 class="p-merit__title c-common-title font-color2  js fadein scroll_up">
-      発電所立地地域と<br class="u-hidden-pc">いい関係を築けます！
+      地域と<br class="u-hidden-pc">いい関係を築けます！
     </h3>
     <div class="p-merit__value p-value">
       <%- include('./_p-value__list', {tab_no: 1}) %>
@@ -27,5 +27,8 @@
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSfTP1Z4U0Gx78zxqvJDPuVaflfFbNnTa6L7atup3-DNM7x10Q/viewform" target="_blank" class="c-modal-btn c-request-btn js fadein scroll_up on">
       お申込みはこちら
     </a>
+    <p class="c-request-btn__annotation js fadein scroll_up">
+      連携自治体（秋田県五城目町、群馬県嬬恋村）以外の<br class="u-hidden-sp">再エネ発電所のご参加も募集しています。
+    </p>
   </div>
 </div>
