--- a/_assets/ejs/parts/_p-model.ejs
+++ b/_assets/ejs/parts/_p-model.ejs
@@ -33,8 +33,11 @@
           いい循環をつくります
         </h2>
         <p class="p-model__text js fadein scroll_up">
-          e.CYCLEとは：再生可能エネルギーを地域と直接つなぐ、新しい電力流通の仕組みです。連携自治体の再エネ発電所の電気をまち未来製作所が集めて、電力会社に入札を行います。その売上の一部から地域活性化資金を創出し、地域を元気にします。
+          e.CYCLEは、再エネと地域を直接つなぎ、再エネの地産地消と都市間流通による地域活性化を実現するアグリゲーションサービスです。連携自治体の再エネ発電所の電気をまち未来製作所が集めて、電力会社に入札を行います。その売上の一部から地域活性化資金を創出し、地域を元気にします。
         </p>
+        <div class="p-model__scheme">
+        <img class="lazyload scroll_up" src="/img/common/MM_Scheme-01.png" alt="e.cycleのスキーム図">
+      </div>
       </div>
     </div>
   </section>
