--- a/_assets/ejs/parts/_p-partner.ejs
+++ b/_assets/ejs/parts/_p-partner.ejs
@@ -19,11 +19,11 @@
               <img class="lazyload" src="../img/svg/logo.svg" alt="e.cycle">
               千代田に
             </p>
-            <p>電力を供給する地域</p>
+            <p>パートナー地域</p>
           </div>
         </div>
         <p class="p-partner__text js fadein scroll_up">
-          e.CYCLE千代田では、千代田区が秋田県五城目町、群馬県嬬恋村、岐阜県高山市と「2050年脱炭素社会実現に向けた連携協定」を結び、再エネ電力をe.CYCLE千代田に参加される事業者へ供給し、千代田区での再生可能エネルギーの利用拡大を図ります。またe.CYCLE千代田にご参加いただく再エネ発電所を募集し、新たな再エネ電力の創出を目指します。
+          千代田区が、秋田県五城目町、群馬県嬬恋町と締結した「2050年脱炭素社会実現に向けた連携協定」のもと、再エネをe.CYCLE千代田に参加される事業者へ供給し、千代田区での再エネの利用拡大を図ります。またe.CYCLE千代田にご参加いただく再エネ発電所を募集し、新たな再エネの創出を目指します。
         </p>
       </div>
       <div class="p-partner__img">
