--- a/_assets/scss/object/project/_p-modal.scss
+++ b/_assets/scss/object/project/_p-modal.scss
@@ -1,10 +1,10 @@
-@use '../..//mixin/mixin' as *;
+@use '../../mixin/mixin' as *;
 @use '../../setting/setting' as *;
 
 /* モーダル */
 .modal-overlay {
   align-items: center;
-  background: url(..//img/common/kv.jpg);
+  background: url(../img/common/kv.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -83,8 +83,8 @@
   }
   a{
     display: block;
-    padding: 6rem 4rem;
-    color: $font-color1;
+    padding: 6rem 2rem;
+    color: $font-color2;
     @include sp{
       font-size: 2rem;
       padding: min(3rem, 2vh) 4rem;
@@ -96,13 +96,17 @@
   background: $bg-color6;
 }
 
+.modal-button a:hover{
+  color: $font-color3;
+  // opacity: 0.7;
+}
+
 .modal-button::after{
   content: "";
   position: absolute;
   right: 2rem;
   bottom: 2rem;
-  background: url(..//img/svg/arrow-up-right.svg);
-  
+  background: url(../img/svg/arrow-up-right.svg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -110,6 +114,10 @@
   height: 1.4rem;
 }
 
+.modal-button:hover::after{
+  background: url(../img/svg/arrow-up-right-white.svg);
+  opacity: 0.3;
+}
 .modal-button:last-of-type{
   margin-right: 0;
 }
