--- a/_assets/scss/object/project/_p-header.scss
+++ b/_assets/scss/object/project/_p-header.scss
@@ -115,7 +115,7 @@ p-header
 .p-header__menu img{
   width: 8.1rem;
   @include sp{
-    width: 10.7rem;
+    width: 12rem;
     padding-right: 0.5rem;
   }
 }
@@ -149,14 +149,14 @@ p-header
   display: none;
   position: absolute;
   top: 5rem;
-  padding-top: 1.5rem;
-  // margin-top: 1.5rem;
+  // padding-top: 1.5rem;
+  margin-top: 1.5rem;
   // margin-top: 6.5rem;
   left: 1.5rem;
   width: 16rem;
   // background: $bg-color1;
-  // border-radius: 1rem;
-  // box-shadow: 0 0.4rem 2rem rgba(0, 158, 140, 0.2);
+  border-radius: 1rem;
+  box-shadow: 0 0.4rem 2rem rgba(0, 158, 140, 0.2);
 
   @include sp{
     position: relative;
@@ -172,16 +172,16 @@ p-header
 }
 .p-header__submenu li{
   @include pc{
-    background: $bg-color1;
-    box-shadow: 0 0.4rem 2rem rgba(0, 158, 140, 0.2);
+    // background: $bg-color1;
+    // box-shadow: 0 0.4rem 2rem rgba(0, 158, 140, 0.2);
   }
 }
-.p-header__submenu li:first-of-type {
-  border-radius: 1rem 1rem 0 0 ;
-}
-.p-header__submenu li:last-of-type {
-  border-radius: 0 0 1rem 1rem;
-}
+// .p-header__submenu li:first-of-type {
+//   border-radius: 1rem 1rem 0 0 ;
+// }
+// .p-header__submenu li:last-of-type {
+//   border-radius: 0 0 1rem 1rem;
+// }
 
 .p-header__submenu li:first-of-type a{
   border-radius: 1rem 1rem 0 0 ;
@@ -193,11 +193,19 @@ p-header
   background: $bg-color6;
   color: $font-color3-op;
   opacity: 1;
-  // border-radius: 1rem;
+  border-radius: 1rem;
 
   // opacity: 0.7;
 }
 
+.p-header__submenu::before{
+  position: absolute;
+  content: "";
+  top: -2rem;
+  width: 100%;
+  height: 120%;
+
+}
 
 .p-header__submenu-have{
   @include sp{
